--- a/webapp.html
+++ b/webapp.html
@@ -3,6 +3,6 @@
 <title> Body bgcolor Attribute Example</title>
 </head>
 <body bgcolor="#afafaf">
-<h1>this webpage has grey colored background </h1>
+<h1>this webpage has colored background </h1>
 </body>
 </html>
